<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstQuestionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="96dp"
        android:text="@string/first_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="204dp"
        android:onClick="nextQuestion"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginTop="204dp"
        android:onClick="goToMainMenu"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TimePicker
        android:id="@+id/timePicker2"
        android:layout_width="270dp"
        android:layout_height="105dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="276dp"
        android:timePickerMode="spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_element"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/statisticsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/stat_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/statistics_icon" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/calendar_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/calendar_icon" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/p_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/profile_icon" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>