<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondQuestionActivity">


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_next_page_skip"
        android:layout_marginHorizontal = "10sp"
        android:layout_marginVertical = "10sp"
        android:backgroundTint="@color/bg_element"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <TimePicker
        android:id="@+id/timePickerStart"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:layout_marginEnd="76dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="240dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="400dp"
        android:text="@string/end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="196dp"
        android:text="@string/start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/timePickerEnd"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:layout_marginEnd="76dp"
        android:layout_marginLeft="34dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePickerStart"
        app:layout_constraintVertical_bias="0.431" />

    <LinearLayout
        android:id="@+id/bottomButtonsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_element"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/statisticsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/stat_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/statistics_icon" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/calendar_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/calendar_icon" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/p_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/profile_icon" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/second_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>