<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_element"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/statisticsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/stat_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/statistics_icon" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/calendar_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/calendar_icon" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/p_icon"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/profile_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>